--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Prabhat's blog
-email: hello@patdryburgh.com
+email: ranjanprabhat496@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I write to think, you are welcome to have a look.
 baseurl: "/" # the subpath of your site, e.g. /blog
