--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Prabhat's blog
 email: ranjanprabhat496@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I write to think, you are welcome to have a look.
-baseurl: "/hitchens" # the subpath of your site, e.g. /blog
+baseurl: "/hitchens/" # the subpath of your site, e.g. /blog
 url: "https://prabhat496.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
 twitter_username: patdryburgh
